# sampqle

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  sample_credentials.json
data/: nps.json  products.json  profiles.json  sessions.json  transactions.json  users.json
data/ecommerce/: meta.json  products.json  profiles.json  sessions.json
data/timeseries/: aud.csv  aud.json  aud_gbp.json  gbp.json
notebooks/: Overview.ipynb  timeseries.ipynb
scripts/: 01_nps_by_month.sql  01_nps_view.sql  02_nps_by_month.sql  02a_regex.sql  02b_case_view.sql  03_recent_tx_detractors.sql  04_left_join.sql  04_with_CTE.sql  04t_test_perf.sh  04t_test_same.sh  05_with_window.sql  06_aggregations.sql  06_with_distinct.sql
scripts/ecommerce/: 01_table_stats.sql  02a_regex.sql  02b_case_view.sql  03_group.sql  04_with_CTE.sql  04_with_subquery.sql  04t_test_perf.sh  04t_test_same.sh  05_with_window.sql  06_aggregations.sql
scripts/timeseries/: 00_create.sql  01_create.sql  01_monthly_description.sql  02_binning.sql  03_dow_stats.sql  04_multiple.sql
src/sampqle/: console.py  database.py  synthesize.py
