[tool.poetry]
name = "sampqle"
version = "0.1.0"
description = "A series of SQL script samples using synthetic data."
authors = ["sheplecjs"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.14"
click = "^8.1.3"
notebook = "^6.5.2"
sdv = "^0.17.2"
ipywidgets = "^8.0.3"
sqlalchemy = "^1.4.45"
psycopg2-binary = "^2.9.5"
sqlalchemy-utils = "^0.38.3"
python-lorem = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.12.0"}
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sampqle-info = "sampqle.console:info"
make-data = "sampqle.console:create"